# scoutess

./: .authorspellings  Build Process.page  Front Page.page  HaddockHelper.hs  LICENSE  Main.hs  MainNew.hs  README  README.md  scoutess.cabal
Control/Pipe/: Process.hs  Tee.hs
Scoutess/: Config.hs  Core.hs  DataFlow.hs  Server.hs  Types.hs
Scoutess/Service/Builder/: Core.hs
Scoutess/Service/CabalProxy/: Core.hs
Scoutess/Service/Haddock/: Core.hs  CoreHaddock.hs
Scoutess/Service/LocalHackage/: Core.hs
Scoutess/Service/PackDeps/: Core.hs
Scoutess/Service/Source/: Core.hs  Darcs.hs  Dir.hs  Fetch.hs  Hackage.hs
Scoutess/Utils/: Archives.hs  Cabal.hs  Directory.hs  HTTP.hs  Haddock.hs
doc/design/: build-scenarios.md  possible-integrations.md
tests/: cabal-proxy.hs  dataFlow.hs  fetch-hackage.hs
