name          : scoutess
version       : 0.1

category      : Testing
description   : A Haskell build bot for cabal-powered projects.
homepage      : http://hub.darcs.net/alp/scoutess
synopsis      : A Haskell build bot for cabal-powered projects

author        : Jeremy Shaw, Alp Mestanogullari, David McGillicuddy
copyright     : 2012 Jeremy Shaw, Alp Mestanogullari, David McGillicuddy
license       : BSD3
license-file  : LICENSE
maintainer    : alpmestan@gmail.com

build-type    : Simple
cabal-version : >=1.8

source-repository head
  type     : darcs
  location : http://hub.darcs.net/alp/scoutess

flag old-time
  default          : False

library
  exposed-modules  : Scoutess.Config
                     Scoutess.Core
                     Scoutess.DataFlow
                     Scoutess.Server
                     Scoutess.Service.LocalHackage.Core
                     Scoutess.Service.PackDeps.Core
                     Scoutess.Service.Source.Darcs
                     Scoutess.Service.Source.Dir
                     Scoutess.Service.Source.Fetch
                     Scoutess.Service.Source.Hackage
                     Scoutess.Types
                     Scoutess.Utils.Archives
                     Scoutess.Utils.Directory
                     Scoutess.Utils.HTTP
  build-depends    : base         == 4.*,
                     bytestring   >= 0.9 && < 0.11,
                     Cabal        >= 1.14 && < 1.17,
                     containers   >= 0.4 && < 0.6,
                     filemanip    == 0.3.*,
                     filepath     == 1.3.*,
                     HTTP         == 4000.2.*,
                     mtl          == 2.1.*,
                     network      >= 2.3 && < 2.5,
                     old-locale   == 1.0.*,
                     old-time     == 1.1.*,
                     pretty       == 1.1.*,
                     process      == 1.1.*,
                     tar          == 0.4.*,
                     text         == 0.11.*,
                     transformers == 0.3.*,
                     zlib         == 0.5.*
  if flag(old-time)
    cpp-options     : -DOLD_TIME
    build-depends   : old-time    == 1.1.*,
                      directory    == 1.1.*
  else
    build-depends   : time        >= 1.4 && < 1.5,
                      directory    >= 1.2 && < 1.3

executable scoutess
  main-is        : Main.hs
  hs-source-dirs : ""
  build-depends  : base, containers, directory, filepath, scoutess, text
